--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
     <ion-card-content>
       <ion-item lines="none">
 
-        <ion-label >Rut: {{data.rut}}</ion-label>
+        <ion-label >Rut: {{data.id}}</ion-label>
       </ion-item>
     </ion-card-content>
   </ion-card>
