--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,12 +16,17 @@
     </ion-card-header>
     <ion-card-content>
       <ion-item lines="full">
-        <ion-label position="floating">Ingrese RUT</ion-label>
-        <ion-input type="text" [(ngModel)]="user.rut" ></ion-input>
+        <ion-label position="floating">Ingrese su RUN:</ion-label>
+        <ion-input type="text" [(ngModel)]="Usuarios.ID" ></ion-input>
+      </ion-item>
+      <ion-item lines="full">
+        <ion-label position="floating">Password:</ion-label>
+        <ion-input type="Password" [(ngModel)]="Usuarios.Password" ></ion-input>
       </ion-item>
       <ion-row>
         <ion-col>
           <ion-button expand="full" (click)="ingresar()" >Ingresar</ion-button>
+          <ion-button expand="full" (click)="registrar()" >Registrar</ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
