--- a/src/app/medico/medico.page.html
+++ b/src/app/medico/medico.page.html
@@ -11,28 +11,22 @@
 
 <ion-content padding class="background" [fullscreen]="true">
   <ion-card>
-    <ion-item lines="none">
-      <ion-label >Rut: {{data.rut}}</ion-label>
-    </ion-item>
-    <ion-item lines="none">
-      <ion-label >Nombre: {{data.nombre}}</ion-label>
-    </ion-item>
-    <ion-item lines="none">
-      <ion-label >Apellido: {{data.apellido}}</ion-label>
-    </ion-item>
-  </ion-card>
-  <ion-card>
     <ion-card-header >
       <ion-title size="small">Medico</ion-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-item lines="full">
-        <ion-label position="floating">Nombre del medico</ion-label>
-        <ion-input type="text" [(ngModel)]="med.nombre" ></ion-input>
-      </ion-item>
+      
+      <ion-list>
+        <ion-radio-group [allowEmptySelection]="true" value="id">
+          <ion-item *ngFor="let usuario of usuarios"> {{usuario.id}} - {{usuario.name}}
+            <ion-label ></ion-label>              
+            <ion-radio slot="end" value="id"></ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
       <ion-row>
         <ion-col>
-          <ion-button expand="full" (click)="ingresar()" >Ingresar</ion-button>
+          <ion-button expand="full" (click)="calendario()">Ingresar</ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
